# rust-simple-crud

./: .env  .gitignore  Cargo.toml  README.md
migrations/2020-02-16-113021_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
